# workflow-test-automation-blueprint

./: .gitignore  README.md  command.sh  conftest.py  databricks.yml  pyproject.toml  pytest.ini
2025-12-integration-test-blueprint/: command.sh  conftest.py
2025-12-integration-test-blueprint/tests/resources/data/nyc_taxi/: sample_nyc_taxi.csv
resources/: nyctaxi_sdp_pipeline.pipeline.yml  workflow_test_automation_blueprint.job.yml
scratch/: local_commands.sh
src/: nyctaxi_functions.py
src/ps_test_blueprint/: main.py  nyctaxi_functions.py  nyctaxi_pipeline.py  utils.py
src/taras/: nyctaxi_functions.py
tests/integration/: test_nyctaxi_job.py  test_nyctaxi_pipeline.py  test_nyctaxi_sdp_pipeline.py
tests/ps_test_blueprint/integration_tests/: test_nyctaxi_functions.py
tests/taras/integration_tests/: test_nyctaxi_functions.py
tests/unit/: test_nyctaxi_transformations.py
